hphp/test/slow/async/invoke.php.expectf
Fatal error: cannot declare constructors, destructors, and magic methods such as '__invoke' async in %s/hphp/test/slow/async/invoke.php on line 4
